BART v1.4.2: GPU acceleration and R-to-Java performance migrations